<resources>
    <string name="app_name">信息技术服务与交流平台</string>
    <string name="sure_exit">确认要退出吗</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="exit_app">再按一次退出应用</string>

    <string name="account_tips">请输入手机号</string>
    <string name="password_tips">请输入密码</string>
    <string name="show_news">显示学校最新发布的新闻公告等</string>
    <string name="regist">注册</string>
    <string name="get_val_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="remind">记住密码</string>
    <string name="chat_robot">人工智能</string>
    <string name="my">个人中心</string>
    <string name="nick_name">用户昵称</string>
    <string name="choice_operation">请选择你要进行的操作：</string>
    <string name="info_modified">基本信息修改</string>
    <string name="modified_password">修改密码</string>
    <string name="exit_login">退出登录</string>
    <string name="more">更多</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="publicity">社交</string>
    <string name="send_something">没有问题吗</string>
    <string name="modified_photo"><u>修改头像</u></string>
    <string name="change_password">修改密码</string>
    <string name="modify_info">个人信息修改</string>
    <string name="phone">手机号：</string>
    <string name="nick">昵称：</string>
    <string name="modify">修改</string>
    <string name="please_input_password">请输入当前密码：</string>
    <string name="input_again_password">请再次输入新密码：</string>
    <string name="input_new_password">请输入新密码：</string>
    <string name="change_pwd_tips">密码由6-18位数字字母组成</string>
    <string name="sure_pwd">确定</string>
    <string name="publish">发布</string>
    <string name="tips">来给大家分享你感兴趣的话题吧</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="regist_tips">请填写完整信息</string>
    <string name="regist_pwd">两次密码输入不一致</string>
    <string name="regist_fail">注册失败，请重新注册</string>
    <string name="login_fail">登录账号有误，请重新登录</string>
    <string name="tips1">密码只能是6-18位的数字或字母</string>
    <string name="tips2">请再次输入新密码</string>
    <string name="tips3">请输入新密码</string>
    <string name="tips4">请输入当前密码</string>
    <string name="publish_empty">请输入发布内容</string>
</resources>
