<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.oujian.graduation.activity.ModifiedInfoActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/home_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/modified_info_toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:clipToPadding="false"
            app:navigationIcon="@drawable/back">
            <TextView
                android:id="@+id/modified_info_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/modify_info"
                style="@style/text_ffffff_20dp"
                />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:id="@+id/modify_photo_ll"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/selector_bg"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.oujian.graduation.view.CircleImageView
            android:id="@+id/photo_my"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_100dp"
            app:civ_border_width="@dimen/dimen_1dp"
            app:civ_border_color="@color/color_1b6bb6"
            app:srcCompat="@drawable/app_icon"
            />
        <TextView
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modified_photo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_60dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:gravity="center_vertical">
        <TextView
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:id="@+id/modify_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="121313213123"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_60dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:gravity="center_vertical">
        <TextView
            android:text="@string/nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/modified_info_nick_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="小样"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/modify_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/modify_sure_btn"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify"/>
    </LinearLayout>
</LinearLayout>
