<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_e3e3e3"
    tools:context="com.oujian.graduation.activity.ChangePasswordActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/home_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/change_password_toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:clipToPadding="false"
            app:navigationIcon="@drawable/back">
            <TextView
                android:id="@+id/change_password_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/change_password"
                style="@style/text_ffffff_20dp"
                />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="@dimen/dimen_100dp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/please_input_password"
                style="@style/text_3a3a3a_16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
            <com.oujian.graduation.view.ClearEditText
                android:layout_marginLeft="@dimen/dimen_18dp"
                android:id="@+id/change_current_pwd_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                style="@style/text_3a3a3a_16dp"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:background="@null"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/input_new_password"
                style="@style/text_3a3a3a_16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
            <com.oujian.graduation.view.ClearEditText
                android:layout_marginLeft="@dimen/dimen_18dp"
                android:id="@+id/change_new_pwd_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                style="@style/text_3a3a3a_16dp"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:background="@null"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/input_again_password"
                style="@style/text_3a3a3a_16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
            <com.oujian.graduation.view.ClearEditText
                android:layout_marginLeft="@dimen/dimen_18dp"
                android:id="@+id/change_again_pwd_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                style="@style/text_3a3a3a_16dp"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:background="@null"
                />
        </LinearLayout>
        <TextView
            android:layout_marginLeft="@dimen/dimen_40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_3a3a3a_16dp"
            android:text="@string/change_pwd_tips"/>

        <Button
            android:id="@+id/change_pwd_btn"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="wrap_content"
            android:text="@string/sure_pwd" />
    </LinearLayout>
</LinearLayout>
