<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_e3e3e3"
    tools:context="com.oujian.graduation.fragment.MyFragment">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/chat_toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:clipToPadding="false">
            <TextView
                android:id="@+id/chat_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my"
                style="@style/text_ffffff_20dp"
                />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <com.oujian.graduation.view.CircleImageView
        android:layout_marginTop="@dimen/dimen_20dp"
        app:srcCompat="@drawable/ic_circle_avatar_default"
        app:civ_border_width="0.5dp"
        app:civ_border_color="@color/color_1b6bb6"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/dimen_70dp"
        android:layout_height="@dimen/dimen_70dp" />

    <TextView
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/text_3a3a3a_18dp"
        />
    <TextView
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/choice_operation"/>
    <View
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_3a3a3a"></View>
    <RelativeLayout
        android:id="@+id/my_modified_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:clickable="true"
        android:background="@drawable/selector_bg">
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_3a3a3a_18dp"
            android:text="@string/info_modified"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_3a3a3a"></View>
    <RelativeLayout
        android:id="@+id/my_change_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:clickable="true"
        android:background="@drawable/selector_bg">
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_3a3a3a_18dp"
            android:text="@string/modified_password"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_3a3a3a"></View>
    <RelativeLayout
        android:id="@+id/my_rl_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:clickable="true"
        android:background="@drawable/selector_bg">
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_3a3a3a_18dp"
            android:text="@string/exit_login"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_3a3a3a"></View>
</LinearLayout>
