<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/dimen_4dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <TextView
               android:layout_marginTop="@dimen/dimen_10dp"
               android:layout_width="match_parent"
               android:layout_height="@dimen/dimen_40dp"
               android:text="@string/sure_exit"
               android:textSize="18sp"
               android:gravity="center"
               android:textColor="@color/color_3a3a3a"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="0.5dp"
               android:background="@color/color_dfdcdc"></LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/dimen_50dp">
               <TextView
                   android:id="@+id/sure_exit_btn"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:textSize="18sp"
                   android:text="@string/sure"
                   android:textColor="@color/color_3a3a3a"
                   />
               <View
                   android:layout_width="0.5dp"
                   android:layout_height="match_parent"
                   android:background="@color/color_dfdcdc"/>
               <TextView
                   android:text="@string/cancel"
                   android:id="@+id/cancel_exit_btn"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:textSize="18sp"
                   android:textColor="@color/color_ed3d52"/>
           </LinearLayout>
       </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
